tests/reference/run-continue_compilation_3-504b670.stderr
semantic error: The end variable of the data implied do loop must be constants
 --> tests/errors/continue_compilation_3.f90:9:24
  |
9 |     data(iarx(i), i=1, k) / 1, 2, 3 /
  |                        ^ 

semantic error: The increment variable of the data implied do loop must be a constant
  --> tests/errors/continue_compilation_3.f90:13:27
   |
13 |     data(iarx(i), i=1, 3, k) / 1, 2, 3 /
   |                           ^ 

semantic error: The start variable of the data implied do loop must be constants
  --> tests/errors/continue_compilation_3.f90:17:21
   |
17 |     data(iarx(i), i=k, 3) / 1, 2, 3 /
   |                     ^ 
